PostActivity UI changed. Image Preview full screen dialog fragment added.

--- a/Soloud/app/src/main/res/layout/activity_post.xml
+++ b/Soloud/app/src/main/res/layout/activity_post.xml
@@ -12,23 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+        <LinearLayout
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/hashtags_and_share_LL">
+            android:layout_height="250dp"
+            android:background="#000000"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/post_photo_IV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                tools:background="@drawable/lorem_image" />
+                tools:background="@drawable/lorem_image"
+                android:src="@drawable/bazo"/>
 
-        </ScrollView>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/hashtags_and_share_LL"
