--- a/Soloud/app/src/main/res/layout/contest_row_card.xml
+++ b/Soloud/app/src/main/res/layout/contest_row_card.xml
@@ -2,35 +2,25 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--<ImageView
+        <ImageView
             android:id="@+id/product_IV"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            tools:background="@drawable/bazo" />-->
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/product_IV"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/bazo"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            app:civ_border_color="#FFFFFF"
-            app:civ_border_width="0dp" />
+            />
 
         <RelativeLayout
             android:id="@+id/info_layout"
