--- a/Soloud/app/src/main/res/layout/activity_login.xml
+++ b/Soloud/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
 
     <RelativeLayout
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#e6004c">
@@ -34,11 +34,38 @@
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_below="@+id/soloud_TV"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
+
             android:layout_marginTop="60dp" />
+
+
+        <TextView
+            android:id="@+id/terms_and_policy_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="@string/terms_and_privacy_policy"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:textColor="#ffffff"
+            android:textSize="12sp"
+            android:layout_marginBottom="16dp"/>
+
+        <com.pnikosis.materialishprogress.ProgressWheel
+            android:id="@+id/progress_wheel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/login_button"
+            android:layout_above="@id/terms_and_policy_TV"
+            android:layout_marginTop="4dp"
+            wheel:matProg_barColor="#ffffff"
+            wheel:matProg_barWidth = "2dp"
+            tools:visibility="visible"
+            wheel:matProg_progressIndeterminate="true"
+            android:visibility="gone"
+            />
 
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
