--- a/Soloud/app/src/main/res/layout/activity_login.xml
+++ b/Soloud/app/src/main/res/layout/activity_login.xml
@@ -12,32 +12,46 @@
         android:layout_height="match_parent"
         android:background="#e6004c">
 
-        <ImageView
+        <TextView
+            android:id="@+id/promo_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_launcher1"
-            android:layout_above="@+id/soloud_TV"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="32dp"/>
+            android:layout_centerInParent="true"
+            android:paddingBottom="30dp"
+            android:gravity="center"
+            android:text="@string/promo_text"
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
 
-        <TextView
+
+        <!--<TextView
             android:id="@+id/soloud_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingBottom="30sp"
+            android:layout_above="@+id/promo_TV"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="16dp"
             android:text="@string/app_name"
             android:textColor="#ffffff"
-            android:textSize="38sp" />
+            android:textSize="38sp" />-->
+
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:background="@drawable/ic_launcher1"
+            android:layout_above="@+id/promo_TV"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"/>
+
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/soloud_TV"
+            android:layout_below="@+id/promo_TV"
             android:layout_centerHorizontal="true"
-
-            android:layout_marginTop="60dp" />
+            android:layout_marginTop="70dp" />
 
 
         <TextView
