--- a/Soloud/app/src/main/res/layout/activity_post.xml
+++ b/Soloud/app/src/main/res/layout/activity_post.xml
@@ -12,21 +12,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/image_LL"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:background="#000000"
-            android:gravity="center">
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:id="@+id/post_photo_IV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:src="@drawable/bazo"
+                android:layout_marginBottom="24dp"/>
+
+            <ImageButton
+                android:id="@+id/rotate_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                tools:src="@drawable/bazo"/>
+                android:background="@drawable/ic_rotate_white_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/post_info_TV"
