--- a/Soloud/app/src/main/res/layout/activity_post.xml
+++ b/Soloud/app/src/main/res/layout/activity_post.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,24 +16,27 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:background="#000000"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/post_photo_IV"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:src="@drawable/bazo"
-                android:layout_marginBottom="24dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:layout_centerHorizontal="true"
+                tools:src="@drawable/bazo" />
 
             <ImageButton
                 android:id="@+id/rotate_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_rotate_white_24dp"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                />
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/ic_rotate_white_24dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"/>
 
         </RelativeLayout>
 
@@ -42,16 +44,16 @@
             android:id="@+id/post_info_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/image_LL"
+            android:layout_marginTop="32dp"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:textColor="#000000"
-            tools:text="#blah blah"
-            android:layout_below="@+id/image_LL"
-            android:layout_marginTop="32dp"/>
+            tools:text="#blah blah" />
 
         <LinearLayout
             android:id="@+id/hashtags_and_share_LL"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
@@ -60,18 +62,23 @@
             android:orientation="vertical">
 
 
-
             <Button
                 android:id="@+id/share_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
-                android:drawableLeft="@drawable/facebook_logo_24"
-                android:drawablePadding="4dp"
-                android:drawableStart="@drawable/facebook_logo_24"
+                android:background="@drawable/my_facebook_drawable"
+                android:drawableLeft="@drawable/com_facebook_button_icon_white"
+                android:drawablePadding="16dp"
+                android:drawableStart="@drawable/com_facebook_button_icon_white"
+                android:paddingEnd="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="16dp"
+                android:paddingStart="8dp"
                 android:text="@string/share_to_facebook"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textColor="#ffffff" />
 
         </LinearLayout>
 
