--- a/Soloud/app/src/main/res/layout/training_item.xml
+++ b/Soloud/app/src/main/res/layout/training_item.xml
@@ -1,22 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <RelativeLayout
+        android:id="@+id/images_RL"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:scaleType="fitXY"
+        >
+
     <ImageView
         android:id="@+id/training_IV"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        tools:src="@drawable/ic_action_lock"
+        android:layout_centerInParent="true"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        />
+
+    <ImageView
+        android:id="@+id/lock_IV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:src="@drawable/bazo"
+        android:src="@drawable/ic_action_lock"
+        android:layout_centerInParent="true"
         />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/training_title_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="14sp"
-        tools:text="1st Tutorial"/>
+        android:layout_centerHorizontal="true"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_marginTop="16dp"
+        tools:text="1st Tutorial"
+        android:layout_below="@id/images_RL"/>
 
-</LinearLayout>
+</RelativeLayout>
