--- a/Soloud/app/src/main/res/layout/activity_hash_tags.xml
+++ b/Soloud/app/src/main/res/layout/activity_hash_tags.xml
@@ -22,10 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/enter_your_hashtag"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:maxLength="26"
-            android:maxLines="1"
+            android:imeOptions="actionNext"
+            android:inputType="textMultiLine"
             android:text="#"
             android:textColor="#000000"
             android:textCursorDrawable="@drawable/text_cursor_red"
