--- a/Soloud/app/src/main/res/layout/activity_login.xml
+++ b/Soloud/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#e6004c">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/promo_TV"
@@ -21,7 +21,7 @@
             android:paddingBottom="30dp"
             android:gravity="center"
             android:text="@string/promo_text"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/white"
             android:textSize="16sp" />
 
 
@@ -63,7 +63,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:layout_alignParentBottom="true"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/white"
             android:textSize="12sp"
             android:layout_marginBottom="16dp"/>
 
@@ -75,7 +75,7 @@
             android:layout_below="@+id/login_button"
             android:layout_above="@id/terms_and_policy_TV"
             android:layout_marginTop="4dp"
-            wheel:matProg_barColor="#ffffff"
+            wheel:matProg_barColor="@android:color/white"
             wheel:matProg_barWidth = "2dp"
             tools:visibility="visible"
             wheel:matProg_progressIndeterminate="true"
@@ -83,4 +83,5 @@
             />
 
     </RelativeLayout>
+
 </android.support.design.widget.CoordinatorLayout>
