--- a/Soloud/app/src/main/res/values-v19/themes.xml
+++ b/Soloud/app/src/main/res/values-v19/themes.xml
@@ -33,7 +33,7 @@
         <item name="singleAccount">false</item>
         <item name="multipaneSupport">false</item>
         <item name="defaultSectionLoaded">0</item>
-        <item name="learningPattern">true</item>
+        <item name="learningPattern">false</item>
         <item name="sectionStyle">@style/MaterialSectionTheme</item>
         <item name="subheaderStyle">@style/MaterialSubheaderTheme</item>
         <item name="accountStyle">@style/MaterialAccountTheme</item>
@@ -48,7 +48,7 @@
         <item name="singleAccount">false</item>
         <item name="multipaneSupport">false</item>
         <item name="defaultSectionLoaded">0</item>
-        <item name="learningPattern">true</item>
+        <item name="learningPattern">false</item>
         <item name="sectionStyle">@style/MaterialSectionTheme.Light</item>
         <item name="subheaderStyle">@style/MaterialSubheaderTheme.Light</item>
         <item name="accountStyle">@style/MaterialAccountTheme</item>
