--- a/Soloud/app/src/main/res/layout/activity_post.xml
+++ b/Soloud/app/src/main/res/layout/activity_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
@@ -22,8 +23,8 @@
                 android:id="@+id/post_photo_IV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="24dp"
                 tools:src="@drawable/bazo" />
 
             <ImageButton
@@ -31,12 +32,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_rotate_white_24dp"
-                android:layout_marginRight="8dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginRight="8dp"
+                android:background="@drawable/ic_rotate_white_24dp" />
 
         </RelativeLayout>
 
@@ -45,11 +46,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/image_LL"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:textColor="#000000"
             tools:text="#blah blah" />
+
+        <RelativeLayout
+            android:id="@+id/check_in_RL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/post_info_TV"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/place_IV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                app:srcCompat="@drawable/ic_place_black_24dp"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+
+            <TextView
+                android:id="@+id/add_location_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@+id/place_IV"
+                android:layout_toRightOf="@+id/place_IV"
+                android:text="@string/add_your_location"
+                android:layout_centerVertical="true"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:id="@+id/autocomplete_LL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/place_IV"
+                android:layout_toEndOf="@+id/place_IV"
+                android:visibility="gone"
+                tools:visibility="visible">
+            <fragment
+                android:id="@+id/place_autocomplete_fragment"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-16dp"
+
+                />
+            </LinearLayout>
+
+
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/hashtags_and_share_LL"
@@ -83,4 +136,6 @@
         </LinearLayout>
 
     </RelativeLayout>
+
+
 </android.support.design.widget.CoordinatorLayout>
