--- a/Soloud/app/src/main/res/layout/wizard_activity.xml
+++ b/Soloud/app/src/main/res/layout/wizard_activity.xml
@@ -4,9 +4,25 @@
     android:layout_height="match_parent"
     >
 
+    <FrameLayout
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
+
+    <FrameLayout
+        android:id="@+id/indicator_container"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="24dp"
+        />
+
+    </FrameLayout>
 
 </RelativeLayout>
