--- a/Soloud/app/src/main/res/layout/training_item3.xml
+++ b/Soloud/app/src/main/res/layout/training_item3.xml
@@ -4,16 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/square_item_RL"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00ff00">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/training_IV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/bazo" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <ImageView
+            android:id="@+id/training_IV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/bazo" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_black_to_white" />
+
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/lock_IV"
