User profile in progress.

--- a/Soloud/app/src/main/res/layout/activity_user_profile.xml
+++ b/Soloud/app/src/main/res/layout/activity_user_profile.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.soloud.activities.UserProfileActivity">
+    tools:context="com.android.soloud.profile.UserProfileActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
