--- a/Soloud/app/src/main/res/values/colors.xml
+++ b/Soloud/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="dark_grey">#212121</color>
     <color name="medium_grey">#757575</color>
     <color name="light_grey">#BDBDBD</color>
+
+    <color name="default_gray">#FDFDFD</color>
 </resources>
