--- a/Soloud/app/src/main/res/layout/activity_viewpagertab2.xml
+++ b/Soloud/app/src/main/res/layout/activity_viewpagertab2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.ksoichiro.android.observablescrollview.TouchInterceptionFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.ksoichiro.android.observablescrollview.TouchInterceptionFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -32,11 +33,11 @@
             app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
             app:theme="@style/Toolbar" />
 
-        <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
+        <com.android.soloud.profile.SlidingTabLayout
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_height"
-            android:background="@color/primary" />
+            android:background="@color/default_gray" />
     </LinearLayout>
 
 </com.github.ksoichiro.android.observablescrollview.TouchInterceptionFrameLayout>
