--- a/Soloud/app/src/main/res/values/colors.xml
+++ b/Soloud/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_grey">#BDBDBD</color>
 
     <color name="default_gray">#FDFDFD</color>
+    <color name="holo_light_gray">#ff9e9e9e</color>
 </resources>
