--- a/Soloud/app/src/main/res/layout/fragment_scrollview.xml
+++ b/Soloud/app/src/main/res/layout/fragment_scrollview.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/padding" />
+        <!--<include layout="@layout/padding" />-->
 
         <TextView
             android:layout_width="match_parent"
@@ -25,4 +25,5 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/large_text" />
     </LinearLayout>
+
 </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
