--- a/Soloud/app/src/main/res/layout/activity_login1.xml
+++ b/Soloud/app/src/main/res/layout/activity_login1.xml
@@ -7,10 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
 
+
+    <ImageView
+        android:id="@+id/background_IV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/soloud_login">
+        >
 
 
         <!--<TextView
@@ -65,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/terms_and_policy_TV"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="24dp" />
+            android:layout_marginBottom="36dp" />
 
         <com.pnikosis.materialishprogress.ProgressWheel
             android:id="@+id/progress_wheel"
