--- a/Soloud/app/src/main/res/values/styles.xml
+++ b/Soloud/app/src/main/res/values/styles.xml
@@ -39,6 +39,13 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="LoginStyle" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
+
     <declare-styleable name="MaterialSection">
         <attr name="sectionColorIcon" format="color" />
         <attr name="sectionColorText" format="color" />
