--- a/Soloud/app/src/main/res/layout/gallery_post_fragment.xml
+++ b/Soloud/app/src/main/res/layout/gallery_post_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.soloud.activities.PostActivity">
+    tools:context="com.android.soloud.userPost.PostActivity">
 
     <RelativeLayout
         android:id="@+id/activity_post"
