--- a/Soloud/app/src/main/res/layout/place_search_fragment.xml
+++ b/Soloud/app/src/main/res/layout/place_search_fragment.xml
@@ -32,7 +32,12 @@
         android:id="@+id/place_search_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/cards_margin">
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/current_place_cardview">
         <EditText
             android:id="@+id/place_search_edittext"
             android:layout_width="match_parent"
