--- a/Soloud/app/src/main/res/values/styles.xml
+++ b/Soloud/app/src/main/res/values/styles.xml
@@ -46,6 +46,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="MyToolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+    </style>
+
     <declare-styleable name="MaterialSection">
         <attr name="sectionColorIcon" format="color" />
         <attr name="sectionColorText" format="color" />
