--- a/Soloud/app/src/main/res/layout/user_post_fragment.xml
+++ b/Soloud/app/src/main/res/layout/user_post_fragment.xml
@@ -13,25 +13,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include android:id="@+id/toolbar"
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/toolbar_layout"/>
+            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:id="@+id/image_LL"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:background="#000000"
-            android:orientation="vertical"
-            android:layout_below="@+id/toolbar">
+            android:layout_below="@+id/toolbar"
+            android:background="#000000">
 
             <ImageView
                 android:id="@+id/post_photo_IV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
                 tools:src="@drawable/bazo" />
 
             <ImageButton
@@ -48,49 +49,109 @@
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/post_info_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/image_LL"
-            android:layout_marginTop="24dp"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:textColor="#000000"
-            tools:text="#blah blah" />
-
-        <RelativeLayout
-            android:id="@+id/check_in_RL"
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/post_info_TV"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:layout_below="@+id/image_LL"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="24dp"
+            card_view:cardCornerRadius="4dp">
 
-            <ImageView
-                android:id="@+id/place_IV"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                app:srcCompat="@drawable/ic_place_black_24dp"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                />
-
-            <TextView
-                android:id="@+id/add_location_TV"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/place_IV"
-                android:layout_toRightOf="@+id/place_IV"
-                android:text="@string/check_in"
-                android:layout_centerVertical="true"
-                android:textSize="18sp" />
+                android:orientation="vertical"
+                android:paddingBottom="24dp">
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/post_info_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="24dp"
+                    android:textColor="#000000"
+                    tools:text="#tag1 tag2" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginTop="16dp"/>
+
+                <RelativeLayout
+                    android:id="@+id/check_in_RL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/post_info_TV"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/place_IV"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/ic_place_black_24dp" />
+
+                    <ImageView
+                        android:id="@+id/clearIV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/ic_clear_24dp" />
+
+                    <TextView
+                        android:id="@+id/add_location_TV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_toEndOf="@+id/place_IV"
+                        android:layout_toLeftOf="@id/clearIV"
+                        android:layout_toRightOf="@+id/place_IV"
+                        android:layout_toStartOf="@id/clearIV"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="@string/check_in"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        tools:text="Libido Cafe" />
+
+                    <TextView
+                        android:id="@+id/address_TV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/add_location_TV"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_toEndOf="@id/place_IV"
+                        android:layout_toLeftOf="@id/clearIV"
+                        android:layout_toRightOf="@id/place_IV"
+                        android:layout_toStartOf="@id/clearIV"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textSize="14sp"
+                        tools:text="Maizwnos 108" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:id="@+id/hashtags_and_share_LL"
